--- a/styles.css
+++ b/styles.css
@@ -110,3 +110,71 @@ p {
     width: 70%;
     height: auto;
 }
+@media screen and (max-width: 768px) {
+    .container {
+        padding: 10px;
+    }
+
+    header {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .logo {
+        margin-bottom: 10px;
+    }
+
+    nav ul {
+        margin-left: 0;
+        margin-bottom: 10px;
+        gap: 20px;
+    }
+
+    nav ul li {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+
+    .sign-up {
+        width: 100%;
+        text-align: center;
+    }
+
+    .content {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .text-content {
+        max-width: 100%;
+        padding-bottom: 30px;
+    }
+
+    h1 {
+        font-size: 36px;
+        line-height: 1.2;
+    }
+
+    h2 {
+        font-size: 28px;
+        line-height: 1.2;
+        margin-bottom: 20px;
+    }
+
+    p {
+        width: 100%;
+    }
+
+    .price {
+        font-size: 32px;
+    }
+
+    .watch-carousel {
+        max-width: 100%;
+    }
+
+    .splide__slide img {
+        margin-left: 0;
+        width: 100%;
+    }
+}
